# redvypr

./: .readthedocs.yaml  CNAME  README.md  pyproject.toml  setup.py
doc/: requirements.txt
doc/source/: api.rst  changelog.rst  conf.py  config.rst  design.rst  device.rst  examples.rst  index.rst  installation.rst  redvypr.rst  redvypr_devices.rst
examples/: calibration.yaml  gpsserial.yaml  randdata.yaml  redvypr.yaml  testconfig.yaml
examples/example_device_with_gui/: example_device_with_gui.py
examples/example_randdata_massive/: process_data_tcp.yaml  process_data_udp.yaml  randdata_fast_udp.yaml  randdata_udp.yaml  start_udp_devices.sh
pyinstaller/: redvypr_run.py  run_pyinstaller.bat  run_pyinstaller.sh
redvypr/: CHANGELOG  CHANGELOG.md  VERSION  __init__.py  config.py  configdata.py  data_packets.py  device.py  files.py  gui.py  logger.py  logging_utils.py  packet_statistic.py  redvypr.py  redvypr_address.py  redvypr_main.py  redvypr_main_widget.py  standard_device_widgets.py  utils.py  version.py
redvypr/config/: calibration.yaml  datalogger.py  datalogger.yaml  gpsserial.yaml  heatflowsensor.yaml  mergeplotdata.yaml  netcdf_test.yaml  nmealogbook.yaml  testnetwork.yaml  testplot.yaml
redvypr/devices/: __init__.py  (+24 more)
test/: create_filter_datapacket.py  expand_devicestring.py  test_config.py  test_configwidget.py  test_create_datapacket_and_treat.py  test_custom_generic_sensor.py  test_generic_sensor.py  test_get_data_from_datapacket.py  test_get_metadata.py  test_pydantic_configWidget.py  test_redvypr_address.py  test_redvypr_address_benchmark.py
(+158 files in other folders)
